# bimbrownik

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  TODO.txt  esp_controller.code-workspace  partition.csv  sdkconfig
components/: lv_conf.h
components/application/: CMakeLists.txt  api.c  api_config.c  api_mqtt.c  api_ota.c  api_temperature_sensor.c  app_manager.c  app_manager.h  device_manager.c  device_manager.h  modules.h  mqtt_app.c  mqtt_app.h  mqtt_config.c  mqtt_config.h  network_manager.c  network_manager.h  ota.c  ota.h  ota_config.c  ota_config.h  tcp_server.c  tcp_server.h
components/drivers/: CMakeLists.txt  analog_in.c  analog_in.h  digital_in_out.c  digital_in_out.h  error_code.c  error_code.h  json_parser.c  json_parser.h  keepalive.c  keepalive.h  mqtt_json_parser.c  mqtt_json_parser.h  temperature.c  temperature.h  water_flow_sensor.c  wifidrv.c  wifidrv.h
components/drivers/onewire_uart/src/devices/: ow_device_ds18x20.c
components/drivers/onewire_uart/src/include/ow/: ow.h  ow_config.h  ow_config_default.h
components/drivers/onewire_uart/src/include/ow/devices/: ow_device_ds18x20.h
components/drivers/onewire_uart/src/ow/: ow.c
components/drivers/onewire_uart/src/system/: ow_ll_stm32f429zi_nucleo.c  ow_ll_stm32l496g_discovery.c  ow_ll_template.c  ow_ll_win32.c  ow_sys_template.c  ow_sys_win32.c
main/: CMakeLists.txt  main.c
provisioning/: provisioning.py
test/: FreeRTOSConfig.h  Makefile  freertos_hooks.c  main.c  test.exe.stackdump
test_package/: conanbuild.bat  conanbuildenv-release-xtensalx7.bat  conanfile.py  (+5 more)
(+76 files in other folders)
